Allow icons to overflow to prevent getting cut off (#4987)
* Allow icons to overflow to prevent getting cut off

* improve styles

---------

--- a/app/assets/stylesheets/components/format.scss
+++ b/app/assets/stylesheets/components/format.scss
@@ -6,3 +6,9 @@
 .format-badge-group svg.format-icon {
     height: 1rem;
 }
+
+.format-badge-group svg.access-icon {
+    height: 1rem;
+    overflow: visible;
+    margin-top: 4px;
+}
